# kosmindoormap

./: .clang-tidy  .craft.ini  .craftignore  .flatpak-manifest.json  .gitignore  .gitlab-ci.yml  .kde-ci.yml  CMakeLists.txt  KOSMIndoorMapConfig.cmake.in  README.md  metainfo.yaml
autotests/: CMakeLists.txt  amenitymodeltest.cpp  levelparsertest.cpp  localizedtagtest.cpp  mapcssexpressiontest.cpp  mapcssloadertest.cpp  mapcssparsertest.cpp  mapviewtest.cpp  openinghourscachetest.cpp  oscparsertest.cpp  osmconditionalexpressiontest.cpp  osmelementinfomodeltest.cpp  osmtypetest.cpp  platformfindertest.cpp  platformmodeltest.cpp
autotests/data/: localizedtags.xml
autotests/data/amenitymodel/: amenitymodeltest.osm
autotests/data/changeset/: base.osm  changeset.osc
autotests/data/mapcss/: included-with-class.mapcss  parser-test.mapcss  parser-test.mapcss.ref
autotests/data/osminfomodel/: a11y.json  a11y.xml  car_rental.json  fast_food.json  int-name.json  int-name.xml  mall.json  no-name.json  only-localized-name.json  only-localized-name.xml  parking.json  payment2.json  payment2.xml  rental-vehicle-dock.json  rental-vehicle-dock.xml  rental-vehicle-multi-dock.json  rental-vehicle-multi-dock.xml  restaurant.json  toilets.json  toilets2.json  vending_machine.json  vending_machine_drinks.json  vending_machine_drinks.xml  vending_machine_sweets.json  vending_machine_sweets.xml
src/: CMakeLists.txt  Messages.sh
src/app/: AttributionPage.qml  CMakeLists.txt  ExampleLocationModel.qml  IndoorMapAmenityDelegate.qml  IndoorMapInfoSheet.qml  IndoorMapInfoSheetOpeningHoursDelegate.qml  IndoorMapPage.qml  Main.qml  RoutingProfileSheet.qml  SelectLocationSheet.qml  indoormap.qml  main.cpp  org.kde.kosmindoormap.appdata.xml  org.kde.kosmindoormap.desktop  qml.qrc
src/app/android/: AndroidManifest.xml
src/editor/: CMakeLists.txt  config-editorcontroller.h.in  editorcontroller.cpp  editorcontroller.h  editorcontrollerplugin.cpp  qmldir
src/editor/android/: AndroidManifest.xml  CMakeLists.txt  KOSMEditorController-android-dependencies.xml  build.gradle
src/map/: CMakeLists.txt  config-kosmindoormap.h.in
src/map-publictransport-integration/: CMakeLists.txt  PlatformDialog.qml  kosmindoormap-kpublictransport-integration.cpp  kosmindoormap-kpublictransport-integration.h  locationqueryoverlayproxymodel.cpp  locationqueryoverlayproxymodel.h  realtimeequipmentmodel.cpp  realtimeequipmentmodel.h
src/map-quick/: AmenityListDelegate.qml  AmenitySearchDialog.qml  CMakeLists.txt  FloorLevelSelector.qml  IndoorMap.qml  IndoorMapAttributionLabel.qml  IndoorMapScale.qml  IndoorMapView.qml  OSMElementInformationDialog.qml  OSMElementInformationDialogAddressDelegate.qml  OSMElementInformationDialogImageDelegate.qml  OSMElementInformationDialogLinkDelegate.qml  OSMElementInformationDialogOpeningHoursDelegate.qml  OSMElementInformationDialogStringDelegate.qml  RoomSearchDialog.qml  amenity-model.mapcss  amenitymodel.cpp  amenitymodel.h  amenitysortfilterproxymodel.cpp  amenitysortfilterproxymodel.h  assets.qrc  floorlevelchangemodel.cpp  floorlevelchangemodel.h  kosmindoormapquickplugin.cpp  localization.cpp  localization.h  localization_data.cpp  localization_p.h  mapitem.cpp  mapitem.h  mappointerevent.cpp  mappointerevent.h  osmaddress.cpp  osmelement.cpp  osmelement.h  osmelementinformationmodel.cpp  osmelementinformationmodel.h  osmelementinformationmodel_data.cpp  osmelementinformationmodel_p.h  platformutil.cpp  (+7 more)
src/map/assets/: assets.qrc
src/map/content/: equipmentmodel.cpp  equipmentmodel.h  floorlevelmodel.cpp  floorlevelmodel.h  gatemodel.cpp  gatemodel.h  osmconditionalexpression.cpp  osmconditionalexpression_p.h  osmconditionalexpressioncontext_p.h  platform.cpp  platform.h  platformfinder.cpp  platformfinder_p.h  platformmodel.cpp  platformmodel.h
src/map/loader/: boundarysearch.cpp  boundarysearch_p.h  levelparser.cpp  mapdata.cpp  mapdata.h  maploader.cpp  maploader.h  marblegeometryassembler.cpp  reversegeocodingjob.cpp  reversegeocodingjob.h  tilecache.cpp  tilecache_p.h
src/map/network/: networkaccessmanagerfactory.cpp  networkaccessmanagerfactory.h  useragent.cpp  useragent_p.h
src/map/renderer/: hitdetector.cpp  painterrenderer.cpp  painterrenderer.h  scenegraphdumper.cpp  scenegraphdumper.h  view.cpp  view.h
src/map/scene/: iconloader.cpp  iconloader_p.h  openinghourscache.cpp  openinghourscache_p.h  overlaysource.cpp  overlaysource.h  penwidthutil.cpp  poleofinaccessibilityfinder.cpp  poleofinaccessibilityfinder_p.h  scenecontroller.cpp  scenecontroller.h  scenegeometry.cpp  scenegeometry_p.h  scenegraph.cpp  scenegraph.h  scenegraphitem.cpp  scenegraphitem.h  texturecache.cpp  texturecache_p.h  (+2 more)
src/osm/: CMakeLists.txt  abstractreader.cpp  abstractreader.h  datasetmergebuffer.h  datatypes.cpp  datatypes.h  element.cpp  element.h  geomath.h  internal.h  io.cpp  io.h  ioplugin.h  languages.cpp  languages.h  o5m.h  o5mparser.cpp  o5mparser.h  o5mwriter.cpp  o5mwriter.h  oscparser.cpp  oscparser.h  osmpbfparser.cpp  osmpbfparser.h  osmpbfwriter.cpp  osmpbfwriter.h  overpassquery.cpp  overpassquery.h  overpassquerymanager.cpp  overpassquerymanager.h  pathutil.h  reader.cpp  reader.h  stringpool.cpp  stringpool.h  xmlparser.cpp  xmlparser.h  xmlwriter.cpp  xmlwriter.h  ztile.h
src/routing/: CMakeLists.txt  assets.qrc  navmesh-filter.mapcss  navmesh.cpp  navmesh.h  navmesh_p.h  navmeshbuilder.cpp  navmeshbuilder.h  navmeshtransform.cpp  navmeshtransform.h  recastnav_p.h  recastnavdebug_p.h  recastnavsettings_p.h  recastsettings_p.h  route.cpp  route.h  routeoverlay.cpp  routeoverlay.h  routingarea.cpp  routingarea.h  routingjob.cpp  routingjob.h  routingprofile.cpp  routingprofile.h
src/routing-quick/: CMakeLists.txt  routingarea.h  routingcontroller.cpp  routingcontroller.h  types.h
src/tools/: CMakeLists.txt  marble-geometry-assembler.cpp  navmesh-dump.cpp  osm-download-data.cpp  reverse-geocode.cpp
src/wikidata/: CMakeLists.txt  entities.h  wikidataquerymanager.cpp
tests/: CMakeLists.txt  IndoorMapPage.qml  indoormap.cpp  indoormap.qml  overpassql-cli.cpp
(+102 files in other folders)
